[gd_scene format=3 uid="uid://d56kl0ah7k1r"]

[ext_resource type="Script" uid="uid://b7l48hlrgw1aj" path="res://addons/cognite/editor/scripts/itens/deed_item.gd" id="1_d7xlx"]

[node name="deed_item" type="HBoxContainer" unique_id=1718657133]
offset_right = 252.0
offset_bottom = 31.0
script = ExtResource("1_d7xlx")

[node name="VBoxContainer" type="HBoxContainer" parent="." unique_id=506925142]
layout_mode = 2

[node name="up" type="Button" parent="VBoxContainer" unique_id=675494943]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 13
text = "▲"
icon_alignment = 1

[node name="down" type="Button" parent="VBoxContainer" unique_id=1632000399]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 13
text = "▼"
icon_alignment = 1

[node name="LineEdit" type="LineEdit" parent="." unique_id=1368791305]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Action:"

[node name="process_mode_button" type="MenuButton" parent="." unique_id=1169434274]
layout_mode = 2
size_flags_horizontal = 3
text = "Cascade"
item_count = 3
popup/item_0/text = "Process mode"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "Cascade"
popup/item_1/id = 1
popup/item_2/text = "Parallel"
popup/item_2/id = 2

[node name="delete" type="Button" parent="." unique_id=1177499791]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
text = "x"
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="VBoxContainer/down" to="." method="_on_down_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
